apps/overlays/dev/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
  name: web-server
spec:
  rules:
  - host: aebarreiro-dev.lab5g.gradiant.org
    http:
      paths:
      - backend:
          service:
            name: web-server-dev
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - aebarreiro-dev.lab5g.gradiant.org
    secretName: myserver-tls
